# meeting-knowledge-hub

./: .dockerignore  .env.example  .gitignore  Architecture.md  Architecture_backup2.md  PRD.md  PRD_backup2.md  README.md  TASKS.md  TASKS_backup2.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  app.py  endpoints.py  security.py
apps/api/: Dockerfile  package.json
apps/web/: Dockerfile  index.html  package-lock.json  package.json
backend-node/: package-lock.json
backend-node/src/: app.ts
config/teams/: README.md  manifest.template.json
docs/: Architecture_Teams_Live_AI.md  MICROSOFT_TEAMS_PREP_CHECKLIST.md  PRD_Teams_Meeting_AI.md  PRD_backup.md  TASKS_Teams_Meeting_AI.md  TASKS_backup.md
frontend/: nginx.conf  package.json  vite.config.ts
llm/: __init__.py  generator.py  prompting.py  summarize.py
pipeline/: orchestrator.py
rag/: embeddings.py  models.py  store.py  vector_store.py
services/ai-worker/: .env.example  Dockerfile  pyproject.toml
speaker_id/: diarize.py
stt/: model_manager.py  pipeline.py  preprocess.py  whisper_inference.py
tests/: test_api.py  test_api_endpoints.py  test_governance.py  test_ingestion.py  test_llm.py  test_speaker_id.py  test_store.py
ui/: index.html  placeholder.txt
worker-python/: Dockerfile  pyproject.toml
worker-python/api/: app.py  endpoints.py  models.py  security.py  worker_routes.py
worker-python/governance/: scheduler.py
worker-python/ingestion/: doc_extractor.py  validator.py
worker-python/llm/: generator.py  models.py  (+1 more)
(+54 files in other folders)
