[project]
name = "meeting-knowledge-hub"
version = "0.1.0"
description = "On-prem AI meeting intelligence system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.9.0",
    "sqlmodel>=0.0.8",
    "alembic>=1.11.0",
    "qdrant-client>=1.9.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "aiofiles>=23.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.3.0",
    "ruff>=0.0.296"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.0.296",
    "black>=24.3.0"
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "api",
    "governance",
    "ingestion",
    "llm",
    "rag",
    "speaker_id",
    "stt",
    "ui",
]
